# presentation-template

./: .eslintrc.json  .gitignore  .ignore_words.txt  .markdownlint.yaml  .npmrc  .pre-commit-config.yaml  .stylelintrc.json  LICENSE  README.md  about.html  cliff.toml  cspell.json  feature.html  getting_started.html  gulpfile.js  index.html  lighthouserc.js  markdown.html  package-lock.json  package.json  prettierrc.yaml  pyproject.toml  renovate.json  thank_you.html  theme.html  title.html
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  publish.yml  release.yml  scheduled-release.yml  semantic-pr-title.yml
css/: custom.css  kuleuven.css
docs/: reveal-config.md
images/: README.md
js/: custom.js
slides/: 01-title.md  02-about.md  03-features.md  04-getting-started.md  05-conclusion.md
videos/: README.md
